--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-auth.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-auth.yaml.j2
@@ -9,10 +9,10 @@ metadata:
 spec:
   tls:
     - hosts:
-      - auth.{{ web_base_domain }}
+      - lemonldap.auth.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: auth.{{ web_base_domain }}
+  - host: lemonldap.auth.{{ web_base_domain }}
     http:
       paths:
       - path: /
