--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
@@ -7,25 +7,13 @@ metadata:
     {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
     {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-    #nginx.ingress.kubernetes.io/upstream-vhost: manager.{{ web_base_domain }}
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header Accept-Encoding "";
-      sub_filter_types text/html;
-      sub_filter 'href="{{ '{{scriptname}}' }}/diff.html' 'href="/lemonldap{{ '{{scriptname}}' }}/diff.html';
+    #nginx.ingress.kubernetes.io/upstream-vhost: lemonldap.auth.intra.{{ web_base_domain }}
 spec:
   rules:
-  - host: infra.{{ web_base_domain }}
+  - host: lemonldap.auth.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: /lemonldap/?(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: lemonldap
-            port:
-              name: http
-      - path: /((static/|doc/|manager.psgi).*)
+      - path: /
         pathType: Prefix
         backend:
           service:
