--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/ingress.yaml.j2
@@ -7,17 +7,19 @@ metadata:
     {{ phpldapadmin.labels_def | to_nice_yaml() | indent(4) }}
     {{ phpldapadmin.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
+{% if phpldapadmin.context_root != "" %}
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+{% endif %}
 spec:
   tls:
     - hosts:
-      - infra.{{ web_base_domain }}
+      - phpldapadmin.auth.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: infra.{{ web_base_domain }}
+  - host: phpldapadmin.auth.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: /phpldapadmin/?(.*)
+      - path: {{ '/' if phpldapadmin.context_root == '' else phpldapadmin.context_root + '/?(.*)' }}
         pathType: Prefix
         backend:
           service:
