--- a/ansible/install_applications/roles/web-homer.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/deploy/ingress.yaml.j2
@@ -7,18 +7,20 @@ metadata:
     {{ homer.labels_def | to_nice_yaml() | indent(4) }}
     {{ homer.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
+{% if homer.context_root != "" %}
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^({{ homer.context_root }})$ $1/ permanent;
+{% endif %}
 spec:
   tls:
     - hosts:
-      - web.{{ web_base_domain }}
+      - homer.web.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: web.{{ web_base_domain }}
+  - host: homer.web.{{ web_base_domain }}
     http:
       paths:
-      - path: {{ homer.context_root }}
+      - path: {{ '/' if homer.context_root == '' else homer.context_root }}
         pathType: Prefix
         backend:
           service:
