--- a/ansible/install_applications/roles/logging-kibana.deploy/app/config/kibana.yml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/config/kibana.yml.j2
@@ -12,13 +12,17 @@ server.host: "0"
 # Use the `server.rewriteBasePath` setting to tell Kibana if it should remove the basePath
 # from requests it receives, and to prevent a deprecation warning at startup.
 # This setting cannot end in a slash.
-server.basePath: "{{ kibana.context_path }}"
+{% if kibana.context_root != "" %}
+server.basePath: "{{ kibana.context_root }}"
+{% endif %}
 
 # Specifies whether Kibana should rewrite requests that are prefixed with
 # `server.basePath` or require that they are rewritten by your reverse proxy.
 # This setting was effectively always `false` before Kibana 6.3 and will
 # default to `true` starting in Kibana 7.0.
+{% if kibana.context_root != "" %}
 server.rewriteBasePath: true
+{% endif %}
 
 # Specifies the default route when opening Kibana. You can use this setting to modify
 # the landing page when opening Kibana.
