--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/statefulSet.yaml.j2
@@ -53,7 +53,7 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: /kibana/
+            path: {{ '/' if kibana.context_root == '' else elasticsearch.context_root + '/?(.*)' }}
             port: http
           initialDelaySeconds: 3
           periodSeconds: 5
