Migrate monitoring-prometheus URL

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -44,7 +44,7 @@ spec:
   probeNamespaceSelector: {}
   probeSelector: {}
   replicas: 1
-  externalUrl: https://infra.{{ web_base_domain }}/prometheus/
+  externalUrl: https://prometheus.monitoring.intra.{{ web_base_domain }}/{{ prometheus.context_root }}
   resources:
     requests:
       cpu: "{{ prometheus.container.requests_cpu }}"
