--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/ingress-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/ingress-prometheus.yaml.j2
@@ -7,23 +7,18 @@ metadata:
     {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
     {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
+{% if prometheus.context_root != "" %}
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+{% endif %}
 spec:
   rules:
-  - host: infra.{{ web_base_domain }}
+  - host: prometheus.monitoring.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: /prometheus/?(.*)
+      - path: {{ '/' if prometheus.context_root == '' else prometheus.context_root + '/?(.*)' }}
         pathType: Prefix
         backend:
           service:
             name: prometheus-k8s
             port:
               number: 9090
-      - path: /alertmanager/?(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: alertmanager-k8s
-            port:
-              number: 9093
