--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
@@ -7,17 +7,19 @@ metadata:
     {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
     {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
+{% if grafana.context_root != "" %}
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+{% endif %}
 spec:
   tls:
     - hosts:
-      - infra.{{ web_base_domain }}
+      - grafana.monitoring.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: infra.{{ web_base_domain }}
+  - host: grafana.monitoring.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: /grafana/?(.*)
+      - path: {{ '/' if grafana.context_root == '' else grafana.context_root + '/?(.*)' }}
         pathType: Prefix
         backend:
           service:
