--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
@@ -9,13 +9,13 @@ metadata:
 spec:
   tls:
     - hosts:
-      - web.{{ web_base_domain }}
+      - ttrss.web.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: web.{{ web_base_domain }}
+  - host: ttrss.web.{{ web_base_domain }}
     http:
       paths:
-      - path: {{ ttrss.context_root }}
+      - path: {{ '/' if ttrss.context_root == '' else ttrss.context_root }}
         pathType: Prefix
         backend:
           service:
