--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
@@ -11,10 +11,10 @@ metadata:
 spec:
   tls:
     - hosts:
-      - unifi.{{ web_base_domain }}
+      - unifi.infra.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: unifi.{{ web_base_domain }}
+  - host: unifi.infra.intra.{{ web_base_domain }}
     http:
       paths:
       - path: /
