--- a/ansible/install_applications/roles/home-esphome.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/home-esphome.deploy/app/deploy/ingress.yaml.j2
@@ -7,17 +7,19 @@ metadata:
     {{ esphome.labels_def | to_nice_yaml() | indent(4) }}
     {{ esphome.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
+{% if esphome.context_root != "" %}
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+{% endif %}
 spec:
   tls:
     - hosts:
-      - home.{{ web_base_domain }}
+      - esphome.home.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: home.{{ web_base_domain }}
+  - host: esphome.home.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: /esphome/?(.*)
+      - path: {{ '/' if esphome.context_root == '' else esphome.context_root + '/?(.*)' }}
         pathType: Prefix
         backend:
           service:
