--- a/ansible/install_applications/roles/home-zwavejs2mqtt.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/home-zwavejs2mqtt.deploy/app/deploy/ingress.yaml.j2
@@ -7,19 +7,21 @@ metadata:
     {{ zwavejs2mqtt.labels_def | to_nice_yaml() | indent(4) }}
     {{ zwavejs2mqtt.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
+{% if zwavejs2mqtt.context_root != "" %}
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
     nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header X-External-Path /zwave;
+{% endif %}
 spec:
   tls:
     - hosts:
-      - home.{{ web_base_domain }}
+      - zwavejs2mqtt.home.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: home.{{ web_base_domain }}
+  - host: zwavejs2mqtt.home.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: /zwave/?(.*)
+      - path: {{ '/' if zwavejs2mqtt.context_root == '' else zwavejs2mqtt.context_root + '/?(.*)' }}
         pathType: Prefix
         backend:
           service:
