Migrate home-homeassistant URL

--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/config/bootstrap/configuration.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/config/bootstrap/configuration.yaml.j2
@@ -2,8 +2,8 @@ homeassistant:
   # Name of the location where Home Assistant is running
   name: Vagrant
   
-  external_url: https://home.{{ web_base_domain }}
-  internal_url: https://home.{{ web_base_domain }}
+  external_url: https://homeassistant.home.{{ web_base_domain }}
+  internal_url: https://homeassistant.home.{{ web_base_domain }}
 
   # Location required to calculate the time the sun rises and sets
   latitude: 0
