--- a/ansible/install_applications/roles/home-nodered.deploy/app/config/settings.js.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/config/settings.js.j2
@@ -101,7 +101,7 @@ module.exports = {
     // The following property can be used in place of 'httpAdminRoot' and 'httpNodeRoot',
     // to apply the same root to both parts.
     //httpRoot: '/red',
-    {% if nodered.context_root | default('/') != '/' %}httpRoot: '{{ nodered.context_root }}',{% endif %}
+    {% if nodered.context_root != '' %}httpRoot: '{{ nodered.context_root }}',{% endif %}
 
     // When httpAdminRoot is used to move the UI to a different root path, the
     // following property can be used to identify a directory of static content
