--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
@@ -9,13 +9,13 @@ metadata:
 spec:
   tls:
     - hosts:
-      - dev.{{ web_base_domain }}
+      - gitlab.dev.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: dev.{{ web_base_domain }}
+  - host: gitlab.dev.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: {{ gitlab.context_path }}
+      - path: {{ '/' if gitlab.context_root == '' else gitlab.context_root }}
         pathType: Prefix
         backend:
           service:
