Migrate download-deluge URL

--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/ingress.yaml.j2
@@ -9,13 +9,13 @@ metadata:
 spec:
   tls:
     - hosts:
-      - dl.{{ web_base_domain }}
+      - deluge.dl.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: dl.{{ web_base_domain }}
+  - host: deluge.dl.intra.{{ web_base_domain }}
     http:
       paths:
-      - path: {{ deluge_web.context_root }}
+      - path: {{ '/' if deluge_web.context_root == '' else deluge_web.context_root }}
         pathType: Prefix
         backend:
           service:
