--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
@@ -49,7 +49,7 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: {{ pyload.context_root }}
+            path: {{ '/' if pyload.context_root == '' else pyload.context_root }}
             port: webui
           initialDelaySeconds: 3
           periodSeconds: 5
