Migrate download-sabnzbd URL

--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/sabnzbd_delta.ini.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/sabnzbd_delta.ini.j2
@@ -5,7 +5,7 @@ __encoding__ = utf-8
 
 host = 0.0.0.0
 port = 8080
-url_base = {{ sabnzbd.context_root | regex_replace('/$', '') }}
+url_base = {{ '/' if sabnzbd.context_root == '' else sabnzbd.context_root }}
 host_whitelist = sabnzbd-0,dl.{{ web_base_domain }}
 
 enable_https = 0
