--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
@@ -47,7 +47,7 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: {{ sabnzbd.context_root }}
+            path: {{ '/' if sabnzbd.context_root == '' else sabnzbd.context_root }}
             port: http
           initialDelaySeconds: 3
           periodSeconds: 5
