--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
@@ -9,6 +9,7 @@ metadata:
   annotations:
     #nginx.ingress.kubernetes.io/upstream-vhost: lemonldap.auth.intra.{{ web_base_domain }}
 spec:
+  ingressClassName: nginx
   rules:
   - host: lemonldap.auth.intra.{{ web_base_domain }}
     http:
