--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/ingress.yaml.j2
@@ -11,6 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 {% endif %}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - phpldapadmin.auth.intra.{{ web_base_domain }}
