--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/ingress.yaml.j2
@@ -9,6 +9,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - unifi.infra.intra.{{ web_base_domain }}
