--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/ingress.yaml.j2
@@ -12,6 +12,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 {% endif %}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - elasticsearch.log.intra.{{ web_base_domain }}
