--- a/ansible/install_applications/roles/web-homer.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/deploy/ingress.yaml.j2
@@ -12,6 +12,7 @@ metadata:
       rewrite ^({{ homer.context_root }})$ $1/ permanent;
 {% endif %}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - homer.web.{{ web_base_domain }}
