--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-auth.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-auth.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
     {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - lemonldap.auth.{{ web_base_domain }}
