--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
     {{ gitlab.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - gitlab.dev.intra.{{ web_base_domain }}
