--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/ingress.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     {{ sickchill.labels_def | to_nice_yaml() | indent(4) }}
     {{ sickchill.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - sickchill.dl.intra.{{ web_base_domain }}
