--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/ingress.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     {{ nodered.labels_def | to_nice_yaml() | indent(4) }}
     {{ nodered.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - nodered.home.intra.{{ web_base_domain }}
