--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/ingress.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     {{ docker_registry_ui.labels_def | to_nice_yaml() | indent(4) }}
     {{ docker_registry_ui.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - docker-registry-ui.infra.intra.{{ web_base_domain }}
