--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
@@ -11,6 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - registry.intra.{{ web_base_domain }}
