--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     {{ kibana.labels_def | to_nice_yaml() | indent(4) }}
     {{ kibana.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - kibana.log.intra.{{ web_base_domain }}
