--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/ingress-alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/ingress-alertmanager.yaml.j2
@@ -11,6 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 {% endif %}
 spec:
+  ingressClassName: nginx
   rules:
   - host: alertmanager.monitoring.intra.{{ web_base_domain }}
     http:
