--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -329,20 +329,12 @@ watchers:
       - metallb-chart-.*     
   - type: github_release
     repo: kubernetes/ingress-nginx
-    release: controller-v0.48.1
+    release: controller-v1.0.0
     includes:
       - controller-v?[0-9]+\.[0-9]+\.[0-9]+.*
-  # nginx-ingress-controller is deployed using manifests generated from kubernetes/ingress-nginx
-  #- type: docker_registry
-  #  repo: quay.io
-  #  image: kubernetes-ingress-controller/nginx-ingress-controller
-  #  tag: 0.30.0
-  #  excludes:
-  #    - .*(alpha|beta).*
-  #    - 0\.[0-9]\.
-  #    - 0\.1[0-9]\.
-  #  includes:
-  #    - "[0-9]+\\.[0-9]+\\.[0-9]+"
+    excludes:
+      - controller-v?0\.[0-9]+\.[0-9]+.*
+      - beta
   - type: docker_registry
     repo: {{ mailhog.base_image.repo | default('registry-1.docker.io') }}
     image: {{ mailhog.base_image.name }}
