--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/ingress.yaml.j2
@@ -7,6 +7,7 @@ metadata:
     {{ jellyfin.labels_def | to_nice_yaml() | indent(4) }}
     {{ jellyfin.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
       - jellyfin.stream.intra.{{ web_base_domain }}
