--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/config/lmConf.json.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/config/lmConf.json.j2
@@ -1,7 +1,8 @@
 {
    "cfgAuthor" : "Ansible",
    "cfgNum" : 2,
-   "cfgVersion" : "2.0.3",
+   "cfgDate" : "1627287638",
+   "cfgVersion" : "2.0.13",
    "cfgLog": "{{ ansible_managed }}",
 
 {# generalParameters > portalParams #}
