--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/networkPolicies.yaml.j2
@@ -47,3 +47,11 @@ spec:
           podSelector:
             matchLabels:
               {{ roomassistant.labels_def | to_nice_yaml() | indent(14) }}
+
+        # Allow from frigate
+        - namespaceSelector:
+            matchLabels:
+              name: {{ frigate.namespace }}
+          podSelector:
+            matchLabels:
+              {{ frigate.labels_def | to_nice_yaml() | indent(14) }}
