--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -270,6 +270,15 @@ watchers:
     excludes:
       - ^[1-4]\..*
       - ^5\.[0-5]\..*
+  - type: docker_registry
+    repo: {{ frigate.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ frigate.base_image.name }}
+    tag: {{ frigate.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+-amd64
+    excludes:
+      - ^0\.[0-7]\..*
+      - .*nvidia.*
 
   ################
   # Apps : Infra #
